testdata/invalid/duplicate_field.sol
shine Bad {
    private int x;
    private int x;
}
